--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         _ejuInit.height = "300"; //选填，播放器高度，flash播放器默认高度480px，h5播放器默认高度为屏幕宽度的9/16
         _ejuInit.wrapElemId = "ejuPlayerWrap"; //父容器id
         _ejuInit.type = 0; //必填，调用播放器类型，0为自适应移动端或PC端，1为调用h5播放器，2为调用flash播放器
+        _ejuInit.com = 'leju_xf' //必填，项目组缩写
         _ejuInit.videoQueue = [ //必填，视频相关设置
             {
                 liveId: "21093", //必填
